# BetterDesk

./: .dockerignore  .gitignore  .gitleaks.toml  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile.console  Dockerfile.console.dev  Dockerfile.server  Dockerfile.server.dev  LICENSE  MGMT_CLIENT_PROMPT.md  README.md  betterdesk-docker.sh  betterdesk.ps1  betterdesk.sh  build-betterdesk.ps1  build-betterdesk.sh  docker-compose.dev.yml  docker-compose.quick.yml  docker-compose.single.yml  docker-compose.yml  docker-entrypoint.sh  main.go  yomie-docker.sh  yomie.ps1  yomie.sh
.github/: SECURITY.md  copilot-instructions.md  go-server-context.md  labels.yml
.github/workflows/: build.yml  docker-publish.yml  release-client.yml  release-server.yml
betterdesk-agent/: go.mod  go.sum  main.go
betterdesk-agent-client/: index.html  package.json  vite.config.ts
betterdesk-agent-client/src/: App.tsx  main.tsx
betterdesk-agent-client/src-tauri/: Cargo.toml  Info.plist  betterdesk-agent-client.desktop  build.rs  tauri.conf.json
betterdesk-agent-client/src-tauri/capabilities/: default.json
betterdesk-agent-client/src-tauri/nsis/languages/: pl.nsh
betterdesk-agent-client/src-tauri/src/: autostart.rs  bd_signal.rs  chat_crypto.rs  commands.rs  config.rs  lib.rs  registration.rs  sidecar.rs  sysinfo_collect.rs
betterdesk-agent/agent/: agent.go  config.go  desktop.go  desktop_darwin.go  desktop_linux.go  desktop_stub.go  desktop_windows.go  flash_custom.go  input.go  input_darwin.go  input_linux.go  input_windows.go  manifest.go  monitors_darwin.go  monitors_linux.go  monitors_windows.go  (+1 more)
betterdesk-mgmt/: package.json
betterdesk-server/: .air.toml  .gitignore  DEPLOY.md  deploy.sh  go.mod  main.go
bridges/: README.md
docker/: console-dev-entrypoint.sh  console-entrypoint.sh  entrypoint.sh  server-entrypoint.sh  supervisord.conf
docs/: AGENT_CLIENT_FINALIZATION_PLAN_2026-05-06.md  AGENT_CLIENT_ROADMAP_2026-04-10.md  AGENT_CLIENT_ROADMAP_2026-04-21.md  AUDIT_2026-03-27.md  AUDIT_2026-03-28.md  AUDIT_BETTERDESK_2026-04-17.md  BETTERDESK_3.0_ROADMAP.md  PRE_RELEASE_CHECKLIST.md  RDCLIENT_VS_RUSTDESK_AUDIT.md  README.md  REMOTE_CLIENT_UNIFICATION_PLAN.md
screenshots/: README.md
sdks/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/betterdesk_cdap/: __init__.py  bridge.py
sdks/python/yomie_cdap/: __init__.py  bridge.py  protocol.py  widgets.py
tasks/: PHASE_2_5_STATUS.md  agent-operational-plan.md  lessons.md
web-nodejs/: README.md  package.json  reset-password.js  server.js
yomie-agent/: README.md  go.mod  main.go
yomie-mgmt/: index.html  vite.config.ts
yomie-server/: .gitignore  go.mod  go.sum  main.go
(+541 files in other folders)
