[package]
name = "betterdesk-agent-client"
version = "1.0.0"
edition = "2021"
description = "BetterDesk Agent Client — lightweight endpoint device agent"
license = "Proprietary"

[lib]
name = "betterdesk_agent_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "process", "io-util"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
rand = "0.8"
hostname = "0.4"
whoami = "1"
machine-uid = "0.5"
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk", "network"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
keyring = "3"
url = "2"
sha2 = "0.10"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
crypto_box = { version = "0.9", features = ["std"] }
portable-pty = "0.8"
home = "0.5"
enigo = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
arboard = { version = "3", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
